@@ -1,3 +1,5 @@
+[B]1.0.24[/B]
+- cím nélküli blokkok megjelenítése "Egyéb" címmel
 [B]1.0.23[/B]
 - setResumePoint kivételkezelés (csak Kodi 20+-ban létezik)
 [B]1.0.22[/B]
